@@ -1,3 +1,14 @@
+Thu Jun  5 11:11:00 2025  Rob Lauer  <rlauer6@comcast.net>
+
+	[CGI compatibility]:
+	* lib/Query/Param.pm
+	- pod updates
+	(Vars): new
+	(params): new
+	(param): new
+	* t/param-methods.t: new
+	* t/vars.t: new
+
 Thu Jun  5 10:19:28 2025  Rob Lauer  <rlauer6@comcast.net>
 
 	[BigBang]:
